tooling/nargo_cli/tests/snapshots/execution_success/while_keyword/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/5XDsQkAAADCMAv+f7PuTgaCFm19Arunwj5IAAAA",
  "debug_symbols": "nZJLCoMwEIbvkrWLPKqoVylFoo4SCEmIiVDEuzeKsbZQKFlNZv5882IW1EPrx0aoQU+ovi+otUJKMTZSd9wJrUJ0WTMU3cZZgBBCFz1QhltQDtXKS5mhmUu/f5oMV7t13AYVZwhUH2xIOAgJ22vN3jT+jZIiwqQgJ57/z5ck8iVN4av84CnGCTzD9OAZLlN4Fvtnt5T5KbnF/mlK/5Sd86fVL8/61ef+H8HjnbDfFzdzK3gr4XAHr7qL6p4mKvFijdUd9N7ClmnXQu4X",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
